allow the processResources gradle task to replace the ${modVersion} with the current version This few lines of code will replace the ${modVersion} placeholder in the mods.toml with the current mod version

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[37,)"
 license="All rights reserved"
 [[mods]]    
 modId="tensura"
-version="${file.jarVersion}"    
+version="${modVersion}"
 displayName="Tensura:Reincarnated"
 logoFile="logo.png"
 
