set build encoding to UTF-8 This is required to ensure that the jar will be build in UTF-8

--- a/build.gradle
+++ b/build.gradle
@@ -153,3 +153,7 @@ processResources {
 classes.configure {
     dependsOn(replaceResources)
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
