--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,12 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+# Minecraft data
+minecraftVersion=1.18.2
+# Forge date
+forgeVersion=40.0.52
+# Parchment Version
+parchmentVersion=2022.03.13
+# mods.toml data
+minecraftVersionCheck=[1.18.2,1.19)
+# Mod Information see https://mcforge.readthedocs.io/en/1.18.x/gettingstarted/versioning/#examples
+modVersion=0.0.0.1
