--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ parchmentVersion=2022.03.13
 minecraftVersionCheck=[1.18.2,1.19)
 # Mod Information see https://mcforge.readthedocs.io/en/1.18.x/gettingstarted/versioning/#examples
 modVersion=0.0.0.1
+modId=tensura
