fix testing framework gets executed after the test ran though

--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,8 @@ minecraft {
                     source sourceSets.test
                 }
             }
+
+            forceExit false
         }
     }
 }
