--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ minecraftVersionCheck=[1.18.2,1.19)
 # Mod Information see https://mcforge.readthedocs.io/en/1.18.x/gettingstarted/versioning/#examples
 modVersion=0.0.0.1
 modId=tensura
+# Dependencies
+terraBlenderVersion=1.1.0.99
+terraBlenderVersionRange=1.1
