--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -33,3 +33,9 @@ This is the third iteration of the Tensura mod or TTIGRAAS as it was previously 
     versionRange="${terrablenderVersionCheck}"
     ordering="NONE"
     side="BOTH"
+[[dependencies.tensura]]
+    modId="manascore"
+    mandatory=true
+    versionRange="${manasCoreVersionCheck}"
+    ordering="NONE"
+    side="BOTH"
