--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,13 @@ repositories {
     flatDir {
         dir 'libs'
     }
+
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
@@ -115,7 +122,7 @@ dependencies {
 
     //TerraBlender is used to generate our Biomes
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${minecraftVersion}-${terraBlenderVersion}")
-    implementation fg.deobf("com.github.manasmods:manascore:${minecraftVersion}-${manasCoreVersion}")
+    implementation fg.deobf("curse.maven:manascore-619025:${manasCoreFileId}")
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
