--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@ modId=tensura
 # Dependencies
 terraBlenderVersion=1.1.0.99
 terraBlenderVersionRange=1.1
-manasCoreVersion=0.0.0.5
+manasCoreFileId=3775765
 manasCoreVersionCheck=0.0
