--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
 # Minecraft data
 minecraftVersion=1.18.2
 # Forge date
 forgeVersion=40.1.0
 # Parchment Version
-parchmentVersion=2022.05.01
+parchmentVersion=2022.05.02
 # mods.toml data
 minecraftVersionCheck=[1.18.2,1.19)
 # Mod Information see https://mcforge.readthedocs.io/en/1.18.x/gettingstarted/versioning/#examples
-modVersion=0.0.0.1
+modVersion=1.0.0.0
 modId=tensura
 # Dependencies
 terraBlenderVersion=1.1.0.99
 terraBlenderVersionRange=1.1
-manasCoreVersion=0.0.0.14
+manasCoreVersion=0.0.0.17
+jei_version=9.7.0.194
