--- a/build.gradle
+++ b/build.gradle
@@ -153,8 +153,7 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-${minecraftVersion}:${jei_version}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraftVersion}:${jei_version}")
     //Unordinary Basics
-    compileOnly fg.deobf("curse.maven:unordinary-basics-620821:${unordinarybasicsVersion}")
-    runtimeOnly fg.deobf("curse.maven:unordinary-basics-620821:${unordinarybasicsVersion}")
+    implementation fg.deobf("com.github.manasmods:unordinary-basics:${minecraftVersion}-${unordinarybasicsVersion}")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
