--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ modId=tensura
 terraBlenderVersion=1.1.0.102
 manasCoreVersion=0.0.0.17
 jei_version=9.7.0.209
-unordinarybasicsVersion=3861984
+unordinarybasicsVersion=1.0.1.2
